tests/bind-01/out.txt
error: non-exhaustive binding
  ┌─ inp.sml:2:5
  │
2 │ val One = One
  │     ^^^

